--- a/NotifyMe.API/Views/Messages/PartialViews/DetailsPartialView.cshtml
+++ b/NotifyMe.API/Views/Messages/PartialViews/DetailsPartialView.cshtml
@@ -29,8 +29,8 @@
                 <div class="row mb-3">
                     <div class="col">
                         <div class="form-group">
-                            <label asp-for="Body" class="control-label"></label>
-                            <textarea asp-for="Body" class="form-control" id="Body"></textarea>
+                            <label asp-for="ContentBody" class="control-label"></label>
+                            <textarea asp-for="ContentBody" class="form-control" id="Body"></textarea>
                         </div>
                     </div>
                 </div>
