--- a/NotifyMe.API/Views/Notifications/PartialViews/ActionsPartialView.cshtml
+++ b/NotifyMe.API/Views/Notifications/PartialViews/ActionsPartialView.cshtml
@@ -1,4 +1,4 @@
-﻿@model NotificationListViewModel
+﻿@model Notification
 
 <div class="dropdown">
     <button class="btn dropdown-toggle" id="dropdownMenuButton-@Model.Id" type="button" data-bs-toggle="dropdown" aria-expanded="false" title="Actions menu">
