--- a/NotifyMe.API/Views/Users/Index.cshtml
+++ b/NotifyMe.API/Views/Users/Index.cshtml
@@ -3,7 +3,8 @@
 @inject IMapper Mapper;
 @inject IUserService UserService;
 
-@model List<UserListViewModel>
+@* @model List<UserListViewModel> *@
+@model List<User>
 
 @{
     Layout = "_Layout";
