--- a/NotifyMe.API/Views/Configurations/PartialViews/ActionsPartialView.cshtml
+++ b/NotifyMe.API/Views/Configurations/PartialViews/ActionsPartialView.cshtml
@@ -1,5 +1,4 @@
-﻿@* @model UserListViewModel *@
-@model User
+﻿@model Configuration
 
 <div class="dropdown">
     <button class="btn dropdown-toggle" id="dropdownMenuButton-@Model.Id" type="button" data-bs-toggle="dropdown" aria-expanded="false" title="Actions menu">
