--- a/NotifyMe.API/Views/Messages/Index.cshtml
+++ b/NotifyMe.API/Views/Messages/Index.cshtml
@@ -30,7 +30,7 @@
                     <tr data-row=">@item.Id">
                         <th scope="row">@count</th>
                         <td>
-                            <a class="btn link-primary p-0" data-bs-toggle="ajax-modal" data-bs-target="#modal-details" onclick="previewing('@item.Id')">@item.Body</a>
+                            <a class="btn link-primary p-0" data-bs-toggle="ajax-modal" data-bs-target="#modal-details" onclick="previewing('@item.Id')">@item.ContentBody</a>
                         </td>
                         <td>@item.Timestamp</td>
                         <td>
@@ -59,5 +59,5 @@
 
 @section Scripts
 {
-    <script src="~/js/groups.js" asp-append-version="true"></script>
+    <script src="~/js/messages.js" asp-append-version="true"></script>
 }
