--- a/NotifyMe.API/Views/Notifications/PartialViews/CreatePartialView.cshtml
+++ b/NotifyMe.API/Views/Notifications/PartialViews/CreatePartialView.cshtml
@@ -1,55 +1,54 @@
-﻿@model NotificationCreateViewModel
-       @{
-           ViewBag.Title = "Create";
-           Layout = "_Layout";
-       }
-       <div class="modal fade" id="modal-create" tabindex="-1" aria-labelledby="modalCreate" aria-hidden="true">
-           <div class="modal-dialog modal-lg p-5">
-               <div class="modal-content">
-                   <div class="modal-header">
-                       <h1 class="modal-title fs-5" id="modalCreate">@ViewBag.Title</h1>
-                       <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                   </div>
-                   <form id="form-NotificationCreate" asp-action="Create" asp-controller="Notifications" method="post" enctype="multipart/form-data">
-                       <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                       <div class="modal-body">
-                           <div class="row mb-3">
-                               <div class="col">
-                                   <div class="form-group">
-                                       <label asp-for="Recipient" class="control-label"></label>
-                                       <input asp-for="Recipient" class="form-control" id="Recipient">
-                                   </div>
-                               </div>
-                           </div>
-                           <div class="row mb-3">
-                               <div class="col">
-                                   <div class="form-group">
-                                       <label asp-for="Message" class="control-label"></label>
-                                       <textarea asp-for="Message" class="form-control" id="Message"></textarea>
-                                   </div>
-                               </div>
-                           </div>                      
-                           <div class="row mb-3">
-                               <div class="col">
-                                   <div class="form-group">
-                                       <label asp-for="ChangedElements" class="control-label"></label>
-                                       <textarea asp-for="ChangedElements" class="form-control" id="ChangedElements"></textarea>
-                                   </div>
-                               </div>
-                           </div>
-                       </div>
-                       <div class="modal-footer">
-                           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                           <button type="submit" class="btn btn-primary">Save</button>
-                       </div>
-                   </form>
-               </div>
-           </div>
-       </div>
-       
-       @section Scripts{
-           @{
-               await Html.RenderPartialAsync("_ValidationScriptsPartial");
-           }
-       }
+﻿@model Notification
+@{
+    ViewBag.Title = "Create";
+    Layout = "_Layout";
+}
+<div class="modal fade" id="modal-create" tabindex="-1" aria-labelledby="modalCreate" aria-hidden="true">
+    <div class="modal-dialog modal-lg p-5">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="modalCreate">@ViewBag.Title</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <form id="form-NotificationCreate" asp-action="Create" asp-controller="Notifications" method="post" enctype="multipart/form-data">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="modal-body">
+                    <div class="row mb-3">
+                        <div class="col">
+                            <div class="form-group">
+                                <label asp-for="Message" class="control-label"></label>
+                                <input asp-for="Message" class="form-control" id="Message">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <div class="col">
+                            <div class="form-group">
+                                <label asp-for="CurrentThreshold" class="control-label"></label>
+                                <input asp-for="CurrentThreshold" class="form-control" id="CurrentThreshold">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <div class="col">
+                            <div class="form-group">
+                                <label asp-for="EventId" class="control-label"></label>
+                                <input asp-for="EventId" class="form-control" id="EventId">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="submit" class="btn btn-primary">Save</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 
+@section Scripts{
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
