--- a/NotifyMe.API/Views/Notifications/PartialViews/DetailsPartialView.cshtml
+++ b/NotifyMe.API/Views/Notifications/PartialViews/DetailsPartialView.cshtml
@@ -5,7 +5,7 @@
 @*     var user = await UserManager.GetUserAsync(User); *@
 @* } *@
 
-@model NotificationDetailsViewModel
+@model Notification
 @{
     ViewBag.Title = "Preview";
     Layout = "_Layout";
@@ -17,32 +17,32 @@
                 <h1 class="modal-title fs-5" id="modalDetailsLabel">@ViewBag.Title</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">
-                <div class="row mb-3">
-                    <div class="col">
-                        <div class="form-group">
-                            <label asp-for="Recipient" class="control-label"></label>
-                            <input asp-for="Recipient" class="form-control" id="Recipient">
-                        </div>
-                    </div>
-                </div>
-                <div class="row mb-3">
-                    <div class="col">
-                        <div class="form-group">
-                            <label asp-for="Message" class="control-label"></label>
-                            <textarea asp-for="Message" class="form-control" id="Message"></textarea>
-                        </div>
-                    </div>
-                </div>
-                <div class="row mb-3">
-                    <div class="col">
-                        <div class="form-group">
-                            <label asp-for="ChangedElements" class="control-label"></label>
-                            <textarea asp-for="ChangedElements" class="form-control" id="ChangedElements"></textarea>
-                        </div>
-                    </div>
-                </div>
-            </div>
+                  <div class="modal-body">
+                      <div class="row mb-3">
+                          <div class="col">
+                              <div class="form-group">
+                                  <label asp-for="Message" class="control-label"></label>
+                                  <input asp-for="Message" class="form-control" id="Message">
+                              </div>
+                          </div>
+                      </div>
+                      <div class="row mb-3">
+                          <div class="col">
+                              <div class="form-group">
+                                  <label asp-for="CurrentThreshold" class="control-label"></label>
+                                  <input asp-for="CurrentThreshold" class="form-control" id="CurrentThreshold">
+                              </div>
+                          </div>
+                      </div>
+                      <div class="row mb-3">
+                          <div class="col">
+                              <div class="form-group">
+                                  <label asp-for="EventId" class="control-label"></label>
+                                  <input asp-for="EventId" class="form-control" id="EventId">
+                              </div>
+                          </div>
+                      </div>
+                  </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
             </div>
