--- a/NotifyMe.API/Views/Shared/_Layout.cshtml
+++ b/NotifyMe.API/Views/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
                     <a asp-controller="Messages" asp-action="Index" class="nav_link">
                         <i class='bx bx-mail-send nav_icon'></i> <span class="nav_name">Messages</span>
                     </a>
-                    @* <a href="#" class="nav_link"> *@
+                    @* <a asp-controller="Events" asp-action="Index" class="nav_link"> *@
                     @*     <i class='bx bx-bookmark nav_icon'></i> <span class="nav_name">Bookmark</span> *@
                     @* </a> *@
                     @* <a href="#" class="nav_link"> *@
