--- a/NotifyMe.API/Views/Configurations/Index.cshtml
+++ b/NotifyMe.API/Views/Configurations/Index.cshtml
@@ -25,8 +25,8 @@
                 <thead class="thead-light">
                 <tr>
                     <th scope="col">#</th>
-                    <th scope="col">Change Type</th>
-                    <th scope="col">Priority Type</th>
+                    <th scope="col">Change</th>
+                    <th scope="col">Priority</th>
                     <th scope="col">Threshold</th>
                     <th scope="col">Message</th>
                     <th scope="col">Actions</th>
@@ -69,5 +69,5 @@
 
 @section Scripts
 {
-    <script src="~/js/notifications.js" asp-append-version="true"></script>
+    <script src="~/js/configurations.js" asp-append-version="true"></script>
 }
