--- a/NotifyMe.API/Views/Shared/_Layout.cshtml
+++ b/NotifyMe.API/Views/Shared/_Layout.cshtml
@@ -41,29 +41,29 @@
                     <i class='bx bx-layer nav_logo-icon'></i> <span class="nav_logo-name">NotifyMe.API</span>
                 </a>
                 <div class="nav_list">
-                    <a href="#" class="nav_link active">
+                    <a asp-controller="Dashboard" asp-action="Index" class="nav_link active">
                         <i class='bx bx-grid-alt nav_icon'></i> <span class="nav_name">Dashboard</span>
                     </a>
-                    <a asp-controller="Users" asp-action="Index" class="nav_link" >
+                    <a asp-controller="Users" asp-action="Index" class="nav_link">
                         <i class='bx bx-user nav_icon'></i> <span class="nav_name">Users</span>
                     </a>
-                    <a asp-controller="Groups" asp-action="Index" class="nav_link" >
+                    <a asp-controller="Groups" asp-action="Index" class="nav_link">
                         <i class='bx bx-group nav_icon'></i> <span class="nav_name">Groups</span>
                     </a>
-                    <a asp-controller="Notifications" asp-action="Index" class="nav_link" >
+                    <a asp-controller="Configurations" asp-action="Index" class="nav_link">
+                        <i class='bx bx-cog nav_icon'></i> <span class="nav_name">Configurations</span>
+                    </a>
+                    <a asp-controller="Changes" asp-action="Index" class="nav_link">
+                        <i class='bx bxs-right-arrow nav_icon'></i> <span class="nav_name">Changes</span>
+                    </a>
+                    <a asp-controller="Events" asp-action="Index" class="nav_link">
+                        <i class='bx bx-select-multiple nav_icon'></i> <span class="nav_name">Events</span>
+                    </a>
+                    <a asp-controller="Notifications" asp-action="Index" class="nav_link">
                         <i class='bx bx-bell nav_icon nav_icon'></i> <span class="nav_name">Notifications</span>
                     </a>
                     <a asp-controller="Messages" asp-action="Index" class="nav_link">
                         <i class='bx bx-mail-send nav_icon'></i> <span class="nav_name">Messages</span>
-                    </a>
-                    @* <a asp-controller="Events" asp-action="Index" class="nav_link"> *@
-                    @*     <i class='bx bx-bookmark nav_icon'></i> <span class="nav_name">Bookmark</span> *@
-                    @* </a> *@
-                    @* <a href="#" class="nav_link"> *@
-                    @*     <i class='bx bx-folder nav_icon'></i> <span class="nav_name">Files</span> *@
-                    @* </a> *@
-                    <a asp-controller="Statistics" asp-action="Index" class="nav_link" >
-                        <i class='bx bx-bar-chart-alt-2 nav_icon'></i> <span class="nav_name">Stats</span>
                     </a>
                 </div>
             </div>
