--- a/NotifyMe.API/Views/Users/PartialViews/CreatePartialView.cshtml
+++ b/NotifyMe.API/Views/Users/PartialViews/CreatePartialView.cshtml
@@ -1,4 +1,5 @@
 ﻿@model UserCreateViewModel
+
 @{
     ViewBag.Title = "Create";
     Layout = "_Layout";
@@ -54,7 +55,7 @@
                                 <input asp-for="PhoneNumber" class="form-control" id="PhoneNumber">
                             </div>
                         </div>
-                    </div>            
+                    </div>
                     <div class="row mb-3">
                         <div class="col">
                             <div class="form-group">
@@ -87,6 +88,14 @@
                                 <label asp-for="File" class="control-label">Upload an image file</label>
                                 <input asp-for="File" type="file" class="form-control-file" style="border: none; margin-top: 10px;"/>
                                 <span asp-validation-for="File" class="text-danger"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <div class="col">
+                            <div class="form-group">
+                                <label asp-for="GroupId">Group</label><br/>
+                                <select asp-for="GroupId" asp-items="ViewBag.Groups"></select>
                             </div>
                         </div>
                     </div>
