--- a/NotifyMe.API/Views/Configurations/PartialViews/CreatePartialView.cshtml
+++ b/NotifyMe.API/Views/Configurations/PartialViews/CreatePartialView.cshtml
@@ -10,7 +10,7 @@
                 <h1 class="modal-title fs-5" id="modalCreate">@ViewBag.Title</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <form id="form-NotificationCreate" asp-action="Create" asp-controller="Notifications" method="post" enctype="multipart/form-data">
+            <form id="form-NotificationCreate" asp-action="Create" asp-controller="Configurations" method="post" enctype="multipart/form-data">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="modal-body">
                     <div class="row mb-3">
@@ -46,11 +46,10 @@
                     <div class="row mb-3">
                         <div class="col">
                             <div class="form-group">
-                                <label asp-for="Groups" class="control-label"></label>
-                                <textarea asp-for="Groups" class="form-control" id="Groups"></textarea>
+                                <label asp-for="GroupId">Group</label><br />
+                                <select asp-for="GroupId" asp-items="ViewBag.Groups"></select>
                             </div>
                         </div>
-
                     </div>
                 </div>
                 <div class="modal-footer">
