--- a/NotifyMe.API/Views/Configurations/PartialViews/DeletePartialView.cshtml
+++ b/NotifyMe.API/Views/Configurations/PartialViews/DeletePartialView.cshtml
@@ -11,7 +11,7 @@
                 <h5 class="modal-title" id="modalDelete">@ViewBag.Title</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <form asp-action="Delete" asp-controller="Notifications" method="post" enctype="multipart/form-data">
+            <form asp-action="Delete" asp-controller="Configurations" method="post" enctype="multipart/form-data">
                 @Html.Hidden("Id", Model.Id)
                 <div class="modal-body">
                     <p>Are you sure you want to delete this @Model.Id item?</p>
