--- a/NotifyMe.API/Views/Configurations/PartialViews/PanelIndexPartialView.cshtml
+++ b/NotifyMe.API/Views/Configurations/PartialViews/PanelIndexPartialView.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="row align-items-center">
     <div class="col">
-        Notifications
+        Configurations
     </div>
     <div class="col">
         <div class="mt-2 d-grid gap-2 d-md-flex justify-content-md-end">
